# Untitle_CFC

./: .gitignore  README.md  api.py  inference.py  pyproject.toml  requirements.txt  train.py  ui.py
configs/: baseline.yaml
dataloader/: custom_dataloader.py  inference_dataloader.py
model/: custom_model.py  custom_model_old.py
trainer/: base_trainer.py
utils/: metric.py
